# be_flask

./: .env  README.md  pyproject.toml  run.py
config/: settings.py
src/flask_api/: app.py
src/flask_api/jobs/: ingest_file_entries.py  ingest_json.py  ingest_news.py  ingest_post_json.py
src/flask_api/models/: __init__.py  credential.py  file_entry.py  news.py  post_entry.py  user.py
src/flask_api/routes/: api.py  auth.py  test_db.py
